syntax = "proto3";

import "yandex/cloud/priv/datasphere/v2/lzy-zygote.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-auth.proto";

package yandex.cloud.priv.datasphere.v2;

option go_package = "datasphere";
option java_outer_classname = "LzyWhiteboard";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";

service SnapshotApi {
  rpc CreateSnapshot (CreateSnapshotCommand) returns (SnapshotId);
  rpc PrepareToSave (PrepareCommand) returns (OperationStatus);
  rpc Commit (CommitCommand) returns (OperationStatus);
  rpc FinalizeSnapshot (FinalizeSnapshotCommand) returns (OperationStatus);

  // will go away
  rpc GetAllLinks (GetAllLinksCommand) returns (GetAllLinksResponse);
}

service WbApi {
  rpc CreateWhiteboard (CreateWhiteboardCommand) returns (WhiteboardId);
  rpc AddLink (AddLinkCommand) returns (OperationStatus);
  rpc GetWhiteboard (GetWhiteboardCommand) returns (Whiteboard);
}

message CreateSnapshotCommand {
  UserCredentials userCredentials = 1;
}

message CreateWhiteboardCommand {
  UserCredentials userCredentials = 1;
  string snapshotId = 2;
}

message WhiteboardId {
  string wbId = 1;
}

message SnapshotId {
  string snapshotId = 1;
}

message Dependency {
  repeated string depEntryId = 1;
}

message PrepareCommand {
  string snapshotId = 1;
  string entryId = 2;
  string uri = 3;
  Auth auth = 4;
  Dependency dependency = 5;
}

message CommitCommand {
  string snapshotId = 1;
  string entryId = 2;
  bool empty = 3;
  Auth auth = 4;
}

message AddLinkCommand {
  string wbId = 1;
  repeated FieldMapping mappings = 2;
  UserCredentials auth = 3;
}

message FieldMapping {
  string fieldName = 1;
  string entryId = 2;
}

message SlotMapping {
  string slotName = 1;
  string entryId = 2;
}

message GetWhiteboardCommand {
  string wbId = 1;
  UserCredentials auth = 2;
}

message OperationStatus {
  Status status = 1;
  string errorMessage = 2;

  enum Status {
    OK = 0;
    FAILED = 1;
  }
}

message StorageBinding {
  string fieldName = 1;
  string storageUri = 2;
}

message Relation {
  string fieldName = 1;
  repeated string dependencies = 2;
}

message Whiteboard {
  repeated StorageBinding storageBindings = 1;
  repeated Relation relations = 2;
  WhiteboardStatus whiteboardStatus = 3;
  enum WhiteboardStatus {
    UNKNOWN = 0;
    CREATED = 1;
    FINALIZED = 2;
    ERRORED = 3;
  }
}

message FinalizeSnapshotCommand {
  string snapshotId = 1;
  UserCredentials auth = 2;
}

message GetAllLinksCommand {
  string snapshotId = 1;
}

message GetAllLinksResponse {
  repeated StorageBinding storageBindings = 1;
  repeated Relation relation = 2;
}